--- a/templates/base.html
+++ b/templates/base.html
@@ -31,13 +31,13 @@
         <div class="header header-one">
             <div class="header-left header-left-one">
                 <a href="index.html" class="logo">
-                    <img src="{% static 'img/logo.png' %}" alt="Logo">
+                    <img src="{% static 'img/sm.png' %}" alt="Logo">
                 </a>
                 <a href="index.html" class="white-logo">
-                    <img src="{% static 'img/logo-white.png' %}" alt="Logo">
+                    <img src="{% static 'img/sm.png' %}" alt="Logo">
                 </a>
                 <a href="index.html" class="logo logo-small">
-                    <img src="{% static 'img/logo-small.png' %}" alt="Logo" width="30" height="30">
+                    <img src="{% static 'img/sm.png' %}" alt="Logo" width="30" height="30">
                 </a>
             </div>
 
