--- a/templates/base.html
+++ b/templates/base.html
@@ -30,13 +30,13 @@
 
         <div class="header header-one">
             <div class="header-left header-left-one">
-                <a href="index.html" class="logo">
+                <a href="" class="logo">
                     <img src="{% static 'img/sm.png' %}" alt="Logo">
                 </a>
-                <a href="index.html" class="white-logo">
+                <a href="" class="white-logo">
                     <img src="{% static 'img/sm.png' %}" alt="Logo">
                 </a>
-                <a href="index.html" class="logo logo-small">
+                <a href="" class="logo logo-small">
                     <img src="{% static 'img/sm.png' %}" alt="Logo" width="30" height="30">
                 </a>
             </div>
