--- a/templates/client-list.html
+++ b/templates/client-list.html
@@ -57,10 +57,10 @@
                                         <td>16 Nov 2020</td>
                                         <td><span class="badge badge-pill bg-success-light">Active</span></td> -->
                                         <td class="text-end">
-                                            <a href="edit-customer.html"
+                                            <a href="{% url 'invoice:edit_customer' client.id %}"
                                                 class="btn btn-sm btn-white text-success me-2"><i
                                                     class="far fa-edit me-1"></i> Edit</a>
-                                            <a href="javascript:void(0);"
+                                            <a onclick="deleteClient({{client.id}})"
                                                 class="btn btn-sm btn-white text-danger me-2"><i
                                                     class="far fa-trash-alt me-1"></i>Delete</a>
                                         </td>
@@ -75,6 +75,45 @@
         </div>
     </div>
 </div>
+
+
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script>
+
+    function deleteClient(id) {
+        Swal.fire({
+            title: 'Are you sure?',
+            text: "You won't be able to revert this!",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, delete it!'
+            }).then((result) => {
+            if (result.isConfirmed) {
+                $.ajax({
+                    url : "/deleteclient/",
+                    type : "POST",
+                    data : {
+                        'id': id,
+                    },
+                    success : function(response){
+                        Swal.fire(
+                        'Deleted!',
+                        'Your file has been deleted.',
+                        'success'
+                        )
+                        setTimeout(function () {
+                        location.reload();
+                        },1000);
+                    }
+                    
+                })
+            }
+        })
+    }
+    
+</script>
 
 
 
