--- a/templates/invoice-list.html
+++ b/templates/invoice-list.html
@@ -49,201 +49,37 @@
                                         <th>Client</th>
                                         <th>Amount</th>
                                         <th>Date</th>
-                                        <th>Status</th>
-                                        <th class="text-end">Action</th>
+                                        <!-- <th>Status</th> -->
+                                        <th class="text-center">Action</th>
                                     </tr>
                                 </thead>
                                 <tbody>
+                                    {% for invoice in invoices %}
                                     <tr>
                                         <td>
-                                            <a href="view-invoice.html" class="invoice-link">IN093439#@09</a>
+                                            <a href="view-invoice.html" class="invoice-link">{{invoice.invoice_number}}</a>
                                         </td>
                                         <td>
                                             <h2 class="table-avatar">
-                                                <a href="profile.html"><img
-                                                        class="avatar avatar-sm me-2 avatar-img rounded-circle"
-                                                        src="{% static 'img/profiles/avatar-04.jpg' %}"
-                                                        alt="User Image"> Barbara Moore</a>
+                                                {{invoice.client.name}}
                                             </h2>
                                         </td>
-                                        <td class="text-primary">$1,54,220</td>
-                                        <td>23 Mar 2022</td>
-                                        <td><span class="badge bg-success-light">Paid</span></td>
-                                        <td class="text-end">
-                                            <div class="dropdown dropdown-action">
-                                                <a href="#" class="action-icon dropdown-toggle"
-                                                    data-bs-toggle="dropdown" aria-expanded="false"><i
-                                                        class="fas fa-ellipsis-v"></i></a>
-                                                <div class="dropdown-menu dropdown-menu-end">
-                                                    <a class="dropdown-item" href="edit-invoice.html"><i
-                                                            class="far fa-edit me-2"></i>Edit</a>
-                                                    <a class="dropdown-item" href="view-invoice.html"><i
-                                                            class="far fa-eye me-2"></i>View</a>
-                                                    <a class="dropdown-item" href="javascript:void(0);"><i
-                                                            class="far fa-trash-alt me-2"></i>Delete</a>
-                                                    <a class="dropdown-item" href="javascript:void(0);"><i
-                                                            class="far fa-check-circle me-2"></i>Mark as
-                                                        sent</a>
-                                                    <a class="dropdown-item" href="javascript:void(0);"><i
-                                                            class="far fa-paper-plane me-2"></i>Send Invoice</a>
-                                                    <a class="dropdown-item" href="javascript:void(0);"><i
-                                                            class="far fa-copy me-2"></i>Clone Invoice</a>
-                                                </div>
-                                            </div>
+                                        <td class="text-primary">{{invoice.grand_total}}</td>
+                                        <td>{{invoice.date}}</td>
+                                        <!-- <td><span class="badge bg-success-light">Paid</span></td> -->
+                                        <td class="text-center">
+                                            <a href="{% url 'invoice:bill' invoice.id %}"
+                                                class="btn btn-sm btn-white text-primary me-2"><i
+                                                    class="fe fe-eye me-1"></i>View</a>
+                                            <a href=""
+                                                class="btn btn-sm btn-white text-success me-2"><i
+                                                    class="far fa-edit me-1"></i> Edit</a>
+                                            <a onclick=""
+                                                class="btn btn-sm btn-white text-danger me-2"><i
+                                                    class="far fa-trash-alt me-1"></i>Delete</a>
                                         </td>
                                     </tr>
-                                    <tr>
-                                        <td>
-                                            <a href="view-invoice.html" class="invoice-link">IN093439#@10</a>
-                                        </td>
-                                        <td>
-                                            <h2 class="table-avatar">
-                                                <a href="profile.html"><img
-                                                        class="avatar avatar-sm me-2 avatar-img rounded-circle"
-                                                        src="{% static 'img/profiles/avatar-06.jpg' %}"
-                                                        alt="User Image"> Karlene Chaidez</a>
-                                            </h2>
-                                        </td>
-                                        <td class="text-primary">$1,222</td>
-                                        <td>18 Mar 2022</td>
-                                        <td><span class="badge bg-danger-light">Overdue</span></td>
-                                        <td class="text-end">
-                                            <div class="dropdown dropdown-action">
-                                                <a href="#" class="action-icon dropdown-toggle"
-                                                    data-bs-toggle="dropdown" aria-expanded="false"><i
-                                                        class="fas fa-ellipsis-v"></i></a>
-                                                <div class="dropdown-menu dropdown-menu-end">
-                                                    <a class="dropdown-item" href="edit-invoice.html"><i
-                                                            class="far fa-edit me-2"></i>Edit</a>
-                                                    <a class="dropdown-item" href="view-invoice.html"><i
-                                                            class="far fa-eye me-2"></i>View</a>
-                                                    <a class="dropdown-item" href="javascript:void(0);"><i
-                                                            class="far fa-trash-alt me-2"></i>Delete</a>
-                                                    <a class="dropdown-item" href="javascript:void(0);"><i
-                                                            class="far fa-check-circle me-2"></i>Mark as
-                                                        sent</a>
-                                                    <a class="dropdown-item" href="javascript:void(0);"><i
-                                                            class="far fa-paper-plane me-2"></i>Send Invoice</a>
-                                                    <a class="dropdown-item" href="javascript:void(0);"><i
-                                                            class="far fa-copy me-2"></i>Clone Invoice</a>
-                                                </div>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <a href="view-invoice.html" class="invoice-link">IN093439#@11</a>
-                                        </td>
-                                        <td>
-                                            <h2 class="table-avatar">
-                                                <a href="profile.html"><img
-                                                        class="avatar avatar-sm me-2 avatar-img rounded-circle"
-                                                        src="{% static 'img/profiles/avatar-08.jpg' %}"
-                                                        alt="User Image"> Russell Copeland</a>
-                                            </h2>
-                                        </td>
-                                        <td class="text-primary">$3,470</td>
-                                        <td>10 Mar 2022</td>
-                                        <td><span class="badge bg-primary-light">Cancelled</span></td>
-                                        <td class="text-end">
-                                            <div class="dropdown dropdown-action">
-                                                <a href="#" class="action-icon dropdown-toggle"
-                                                    data-bs-toggle="dropdown" aria-expanded="false"><i
-                                                        class="fas fa-ellipsis-v"></i></a>
-                                                <div class="dropdown-menu dropdown-menu-end">
-                                                    <a class="dropdown-item" href="edit-invoice.html"><i
-                                                            class="far fa-edit me-2"></i>Edit</a>
-                                                    <a class="dropdown-item" href="view-invoice.html"><i
-                                                            class="far fa-eye me-2"></i>View</a>
-                                                    <a class="dropdown-item" href="javascript:void(0);"><i
-                                                            class="far fa-trash-alt me-2"></i>Delete</a>
-                                                    <a class="dropdown-item" href="javascript:void(0);"><i
-                                                            class="far fa-check-circle me-2"></i>Mark as
-                                                        sent</a>
-                                                    <a class="dropdown-item" href="javascript:void(0);"><i
-                                                            class="far fa-paper-plane me-2"></i>Send Invoice</a>
-                                                    <a class="dropdown-item" href="javascript:void(0);"><i
-                                                            class="far fa-copy me-2"></i>Clone Invoice</a>
-                                                </div>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <a href="view-invoice.html" class="invoice-link">IN093439#@12</a>
-                                        </td>
-                                        <td>
-                                            <h2 class="table-avatar">
-                                                <a href="profile.html"><img
-                                                        class="avatar avatar-sm me-2 avatar-img rounded-circle"
-                                                        src="{% static 'img/profiles/avatar-10.jpg' %}"
-                                                        alt="User Image"> Joseph Collins</a>
-                                            </h2>
-                                        </td>
-                                        <td class="text-primary">$8,265</td>
-                                        <td>30 Mar 2022</td>
-                                        <td><span class="badge bg-success-light">Paid</span></td>
-                                        <td class="text-end">
-                                            <div class="dropdown dropdown-action">
-                                                <a href="#" class="action-icon dropdown-toggle"
-                                                    data-bs-toggle="dropdown" aria-expanded="false"><i
-                                                        class="fas fa-ellipsis-v"></i></a>
-                                                <div class="dropdown-menu dropdown-menu-end">
-                                                    <a class="dropdown-item" href="edit-invoice.html"><i
-                                                            class="far fa-edit me-2"></i>Edit</a>
-                                                    <a class="dropdown-item" href="view-invoice.html"><i
-                                                            class="far fa-eye me-2"></i>View</a>
-                                                    <a class="dropdown-item" href="javascript:void(0);"><i
-                                                            class="far fa-trash-alt me-2"></i>Delete</a>
-                                                    <a class="dropdown-item" href="javascript:void(0);"><i
-                                                            class="far fa-check-circle me-2"></i>Mark as
-                                                        sent</a>
-                                                    <a class="dropdown-item" href="javascript:void(0);"><i
-                                                            class="far fa-paper-plane me-2"></i>Send Invoice</a>
-                                                    <a class="dropdown-item" href="javascript:void(0);"><i
-                                                            class="far fa-copy me-2"></i>Clone Invoice</a>
-                                                </div>
-                                            </div>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td>
-                                            <a href="view-invoice.html" class="invoice-link">IN093439#@13</a>
-                                        </td>
-                                        <td>
-                                            <h2 class="table-avatar">
-                                                <a href="profile.html"><img
-                                                        class="avatar avatar-sm me-2 avatar-img rounded-circle"
-                                                        src="{% static 'img/profiles/avatar-11.jpg' %}"
-                                                        alt="User Image"> Jennifer Floyd</a>
-                                            </h2>
-                                        </td>
-                                        <td class="text-primary">$5,200</td>
-                                        <td>20 Mar 2022</td>
-                                        <td><span class="badge bg-danger-light">Overdue</span></td>
-                                        <td class="text-end">
-                                            <div class="dropdown dropdown-action">
-                                                <a href="#" class="action-icon dropdown-toggle"
-                                                    data-bs-toggle="dropdown" aria-expanded="false"><i
-                                                        class="fas fa-ellipsis-v"></i></a>
-                                                <div class="dropdown-menu dropdown-menu-end">
-                                                    <a class="dropdown-item" href="edit-invoice.html"><i
-                                                            class="far fa-edit me-2"></i>Edit</a>
-                                                    <a class="dropdown-item" href="view-invoice.html"><i
-                                                            class="far fa-eye me-2"></i>View</a>
-                                                    <a class="dropdown-item" href="javascript:void(0);"><i
-                                                            class="far fa-trash-alt me-2"></i>Delete</a>
-                                                    <a class="dropdown-item" href="javascript:void(0);"><i
-                                                            class="far fa-check-circle me-2"></i>Mark as
-                                                        sent</a>
-                                                    <a class="dropdown-item" href="javascript:void(0);"><i
-                                                            class="far fa-paper-plane me-2"></i>Send Invoice</a>
-                                                    <a class="dropdown-item" href="javascript:void(0);"><i
-                                                            class="far fa-copy me-2"></i>Clone Invoice</a>
-                                                </div>
-                                            </div>
-                                        </td>
-                                    </tr>
+                                    {% endfor %}
                                 </tbody>
                             </table>
                         </div>
