--- a/templates/items.html
+++ b/templates/items.html
@@ -59,12 +59,10 @@
                                         <td class="text-text">{{items.rate}}</td>
                                         <td class="items-text">{{items.aditional_details}}</td>
                                         <td class="text-end">
-                                            <a href="edit-invoice.html"
+                                            <a href="{% url 'invoice:edit_items' items.id %}"
                                                 class="btn btn-sm btn-white text-success me-2"><i
                                                     class="far fa-edit me-1"></i> Edit</a>
-                                            <a class="btn btn-sm btn-white text-danger" href="#"
-                                                data-bs-toggle="modal" data-bs-target="#delete_paid"><i
-                                                    class="far fa-trash-alt me-1"></i>Delete</a>
+                                            <a class="btn btn-sm btn-white text-danger" onclick="deleteItem({{items.id}})" ></i>Delete</a>
                                         </td>
                                     </tr>
                                     {% endfor %}
@@ -96,19 +94,19 @@
                             <div class="col-lg-6 col-md-6">
                                 <div class="form-group">
                                     <label>Item Name</label>
-                                    <input type="text" class="form-control" placeholder="Add New Item" name="name">
+                                    <input type="text" class="form-control" required placeholder="Add New Item" name="name">
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6">
                                 <div class="form-group">
                                     <label>Price Per unit</label>
-                                    <input type="number" class="form-control" placeholder="₹" name="price" >
+                                    <input type="number" class="form-control" required placeholder="₹" name="price" >
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6">
                                 <div class="form-group">
                                     <label>Aditional_details   </label>
-                                    <textarea class="form-control" placeholder="Add item description" name="aditional_details"></textarea>
+                                    <textarea class="form-control" required placeholder="Add item description" name="aditional_details"></textarea>
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6">
@@ -135,6 +133,47 @@
         </div>
     </div>
 </div>
+
+
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script>
+
+    function deleteItem(id) {
+        Swal.fire({
+            title: 'Are you sure?',
+            text: "You won't be able to revert this!",
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonColor: '#3085d6',
+            cancelButtonColor: '#d33',
+            confirmButtonText: 'Yes, delete it!'
+            }).then((result) => {
+            if (result.isConfirmed) {
+                $.ajax({
+                    url : "/deleteitems/",
+                    type : "POST",
+                    data : {
+                        'id': id,
+                    },
+                    success : function(response){
+                        Swal.fire(
+                        'Deleted!',
+                        'Your file has been deleted.',
+                        'success'
+                        )
+                        setTimeout(function () {
+                        location.reload();
+                        },1000);
+                    }
+                    
+                })
+            }
+        })
+    }
+    
+</script>
+
+
 
 
 {% endblock %}
