--- a/templates/header.html
+++ b/templates/header.html
@@ -10,7 +10,7 @@
 
     <li class="nav-item ">
         <a href="{% url 'invoice:estimates' %}" class=" nav-link">
-            Estimates
+            Invoice Details
         </a>
     </li>
 
