--- a/templates/invoice.html
+++ b/templates/invoice.html
@@ -7,7 +7,7 @@
         <!-- page-header invoices-page-header -->
         <!-- row align-items-center -->
         <div class="row">
-            <div class="">
+            <!-- <div class="">
                 <div class="col mb-5">
                     <ul class="breadcrumb invoices-breadcrumb">
                         <li class="breadcrumb-item invoices-breadcrumb-item">
@@ -31,7 +31,7 @@
                         </a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <div class="row">
