--- a/templates/header.html
+++ b/templates/header.html
@@ -29,5 +29,9 @@
         <a href="{% url 'invoice:settings' %}" class="nav-link">Settings
         </a>
     </li>
+    <li class="nav-item dropdown has-arrow main-drop">
+        <a href="{% url 'invoice:logout' %}" class="nav-link">Logout
+        </a>
+    </li>
 
 </ul>
