--- a/templates/bill.html
+++ b/templates/bill.html
@@ -92,7 +92,7 @@
                                             <div class="row">
                                                 <div class="col-md-8 col-lg-8 col-sm-8 detail">
                                                     <div class="invoice-logo d-flex">
-                                                        <img src="{% static 'img/sm.png' %}" alt="logo">
+                                                        <img src="{% static 'img/sm1.svg' %}" style="margin-top: 15px;" alt="logo">
                                                         <ul>
                                                             <li><p>sicher mayor</p></li>
                                                             <li><p>1st floor, bp angagdi, mehque</p></li>
@@ -123,7 +123,9 @@
                                             </div>
                                             <div class="col-lg-8 col-md-8 col-sm-8"></div>
                                             <div class="col-lg-2 col-md-2 col-sm-2 p-0">
-                                                <div class="design2"></div>
+                                                <div class="design2">
+                                                    <h4 class="invoicehead" style="color: white;" >INVOICE</h4>
+                                                </div>
                                             </div>
                                         </div>
                                         
@@ -244,7 +246,7 @@
                                                     </div>
                                                     <div class="invoice-terms mb-0">
                                                         <h6>Declaration:</h6>
-                                                        <p style="color: black;" class="mb-4">We declare that the invoice describes the actual price <br> of the goods and that all the particulars mentioned are <br> true.</p>
+                                                        <p style="color: black;" class="mb-4">We declare that the invoice describes <br>  the actual fees of the service and that all <br>  the particulars mentioned are true</p>
                                                     </div>
                                                 </div>
                                                 <div class="col-lg-3 col-md-3 col-sm-3">
