--- a/templates/invoice.html
+++ b/templates/invoice.html
@@ -144,7 +144,7 @@
                                             <td class="add-remove text-end">
                                                 <a href="javascript:void(0);" class="add-btn me-2"><i
                                                         class="fas fa-plus-circle"></i></a>
-                                                <a href="javascript:void(0);" class="remove-btn"><i
+                                                <a href="javascript:void(0);" onclick="DeleteRow(1)" class="remove-btn"><i
                                                         class="fe fe-trash-2"></i></a>
                                             </td>
                                         </tr>
@@ -229,7 +229,7 @@
 </div>
 
 
-<div class="modal custom-modal fade invoices-preview" id="invoices_preview" role="dialog">
+<!-- <div class="modal custom-modal fade invoices-preview" id="invoices_preview" role="dialog">
     <div class="modal-dialog modal-dialog-centered modal-xl">
         <div class="modal-content">
             <div class="modal-body">
@@ -400,7 +400,7 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
 
 <div class="modal custom-modal fade bank-details" id="bank_details" role="dialog">
@@ -589,6 +589,28 @@
         $("#gtotal").html(sum)
 
     }
+
+    // delete row 
+
+    function DeleteRow(id){
+        var completeTotal =0
+        var tax_onlyamount = 0
+        var amount=parseInt($("#itemtaxtotal" + id).val())  
+        var tax = parseInt($("#itemtotal" + id).val())  
+        var total=$("#subtotall" ).html()
+        var subtax = $("#subtax").html()
+        var gtotal = $("#gtotal").html()
+
+        tax_onlyamount = amount - tax
+        sub_total = parseInt(total) - tax
+        sub_tax = parseInt(subtax) - tax_onlyamount
+        completeTotal = parseInt(gtotal) - amount
+
+        $("#subtotall").html(sub_total)
+        $("#subtax").html(sub_tax)
+        $("#gtotal").html(completeTotal)
+
+        }
 
     // invoice generation
 
