--- a/templates/bill.html
+++ b/templates/bill.html
@@ -252,7 +252,7 @@
                                                 <div class="col-lg-3 col-md-3 col-sm-3">
                                                     <div class="invoice-sign text-end pb-3">
                                                         <img class="img-fluid d-inline-block"
-                                                            src="{% static 'img/Sign.png' %}" alt="sign">
+                                                            src="{% static 'img/smSign.jpg' %}" alt="sign">
                                                     </div>
                                                     <p>  Authorised Signatory</p>
                                                 </div>
@@ -266,8 +266,7 @@
                 </div>
                 <div class="row text-end">
                     <div class="col-lg-12 mb-5">
-                            <a onclick="printDiv()" id="Printbutton" class="btn btn-primary btn-sm"><i class="fa fa-print"></i> Print Your Invoice</a>
-                            
+                        <a onclick="printDiv()" id="Printbutton" class="btn btn-primary btn-sm"><i class="fa fa-print"></i> Print Your Invoice</a>
                     </div>
                 </div>
             </div>
