--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7507,9 +7507,9 @@ body[data-layout-mode=dark] .alertify .ajs-footer .ajs-buttons .ajs-button.ajs-o
 	font-size: 16px;
 	color: #8F9BBA;
 }
-.invoice-sign {
+/* .invoice-sign {
 	padding-top: 30px;
-}
+} */
 .invoice-sign span {
 	color: #1B2559;
 	margin-top: 18px;
