--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
     <title>SICHER</title>
 
-    <link rel="shortcut icon" href="{% static 'img/favicon.png' %}">
+    <link rel="shortcut icon" href="{% static 'img/sm.png' %}">
 
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
