--- a/templates/invoice-details.html
+++ b/templates/invoice-details.html
@@ -39,6 +39,7 @@
                                         <th>Client</th>
                                         <th>Amount</th>
                                         <th>Date</th>
+                                        <th>Status</th>
                                         <th class="text-center">Action</th>
                                     </tr>
                                 </thead>
@@ -55,7 +56,11 @@
                                         </td>
                                         <td class="text-primary">{{invoice.grand_total}}</td>
                                         <td>{{invoice.date}}</td>
-                                        <!-- <td><span class="badge bg-success-light">Paid</span></td> -->
+                                        {% if invoice.status == "Paid" %}
+                                        <td><span class="badge bg-success-light">{{invoice.status}}</span></td>
+                                        {% else %}
+                                        <td><span class="badge bg-danger-light">{{invoice.status}}</span></td>
+                                        {% endif %}
                                         <td class="text-center">
                                             <div class="dropdown dropdown-action">
                                                 <a href="#" class="action-icon dropdown-toggle"
