--- a/templates/payment-page.html
+++ b/templates/payment-page.html
@@ -18,8 +18,8 @@
                                         <h6>Invoice Number : {{invoice.invoice_number}}</h6> <br>
                                         <h6>Date : {{invoice.date}}</h6> <br>
                                         <h4>Total : {{invoice.grand_total}}</h4> <br>
-                                    </p>
-
+                                        <h6>Balance : {{balance}}</h4> <br>
+                                    </p> 
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-6 ">
