--- a/templates/invoice.html
+++ b/templates/invoice.html
@@ -623,7 +623,8 @@
             "invoicedate":$("#invoicedate").val(),
             "subtotall":$("#subtotall").html(),
             "gtotal":$("#gtotal").html(),
-            "note":$("#notes").val()
+            "note":$("#notes").val(),
+            "tax":$("#subtax").html(),
         }
         data.push(primarydatas)
         for (var i = 1; i < totalrowCount; i++) {
