--- a/templates/bill.html
+++ b/templates/bill.html
@@ -57,6 +57,19 @@
             }
 
         }
+        .datas{
+            line-height: 1rem;
+            padding-left: 0.5rem;
+            padding-top: 16px;
+        }
+        .sicher{
+            color: #150989;
+            font-weight: 600;
+            font-size: 14px;
+        }
+        .loc{
+            font-size: 14.4px;
+        }
     </style>
     <style>
         .desihn{
@@ -101,10 +114,10 @@
                                                 <div class="col-md-8 col-lg-8 col-sm-8 detail">
                                                     <div class="invoice-logo d-flex">
                                                         <img src="{% static 'img/sm1.svg' %}" style="margin-top: 15px;" alt="logo">
-                                                        <ul style="padding-left: 0.5rem;">
-                                                            <li><p>sicher mayor</p></li>
-                                                            <li><p>1st floor, bp angagdi, mehque</p></li>
-                                                            <li><p>Tirur, Malappuram</p></li>
+                                                        <ul class="datas">
+                                                            <li><p class="sicher">SICHER MAYOR</p></li>
+                                                            <li><p class="loc">1st Floor, Mehque Tower, BP Angadi, </p></li>
+                                                            <li><p class="loc">Tirur, Malappuram, Kerala - 676102</p></li>
                                                         </ul>
                                                     </div>
                                                 </div>
